--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
     "devDependencies": {
         "@hotwired/stimulus": "^3.0.0",
         "@popperjs/core": "^2.11.2",
+        "@swup/debug-plugin": "^1.0",
+        "@swup/fade-theme": "^1.0",
+        "@swup/forms-plugin": "^1.0",
+        "@swup/slide-theme": "^1.0",
         "@symfony/stimulus-bridge": "^3.0.0",
+        "@symfony/ux-swup": "file:vendor/symfony/ux-swup/Resources/assets",
         "@symfony/webpack-encore": "^1.7.0",
         "bootstrap": "^5.1.3",
         "core-js": "^3.0.0",
@@ -11,6 +16,7 @@
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.49.0",
         "sass-loader": "^12.0.0",
+        "swup": "^2.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
