give up rector, started changing attributes manually

--- a/composer.json
+++ b/composer.json
@@ -102,6 +102,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "rector/rector": "^0.12.17",
         "symfony/debug-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/stopwatch": "6.0.*",
