--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,7 +25,7 @@ security:
                 check_path: login
                 enable_csrf: true
             logout:
-                path: app_logout
+                path: logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
