--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -6,3 +6,4 @@ vich_uploader:
     images:
       uri_prefix: /uploads/images
       upload_destination: "%kernel.project_dir%/public/uploads/images"
+      namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
