--- a/.env
+++ b/.env
@@ -39,5 +39,7 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
+MAILER_FROM_ADDRESS=contact@monsite.fr
+MAILER_TO_ADDRESS=contact@monsite.fr
 ###< symfony/mailer ###
