--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.8.0"
+        "bootstrap-icons": "^1.8.0",
+        "ckeditor4": "^4.13.0"
     }
 }
