--- a/config/packages/fos_ckeditor.yaml
+++ b/config/packages/fos_ckeditor.yaml
@@ -1,5 +1,7 @@
 fos_ck_editor:
-    # ...
+    configs:
+        my_config:
+            toolbar: standard
     base_path: "build/ckeditor"
     js_path: "build/ckeditor/ckeditor.js"
 
