--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,7 @@ http {
         access_log /var/log/nginx/access.log;
         root /var/www/public;
         include /etc/nginx/mime.types;
+        client_max_body_size 0;
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
