nginx config everywhere

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,7 @@ http {
         access_log /var/log/nginx/access.log;
         root /var/www/public;
         include /etc/nginx/mime.types;
+        client_max_body_size 0;
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -19,10 +20,12 @@ http {
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $fastcgi_path_info;
+            client_max_body_size 0;
         }
         location / {
             try_files $uri $uri/ /index.php?$query_string;
             gzip_static on;
+            client_max_body_size 0;
         }
     }
     client_max_body_size 0;
